data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3873.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\93\80\80\80\00\01\08"
    "\6d\6f\64\75\6c\65\5f\61\06\66\75\6e\63\5f\61\00"
    "\00\03\82\80\80\80\00\01\01\07\91\80\80\80\00\01"
    "\0d\6d\6f\64\75\6c\65\5f\62\5f\66\75\6e\63\00\01"
    "\0a\8c\80\80\80\00\01\86\80\80\80\00\00\41\05\10"
    "\00\0b"
  )
""
)